--- a/streamLabs/View/Base.lproj/Main.storyboard
+++ b/streamLabs/View/Base.lproj/Main.storyboard
@@ -266,6 +266,7 @@
                                                             <subviews>
                                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="backGradient" translatesAutoresizingMaskIntoConstraints="NO" id="uKj-H1-2Yr">
                                                                     <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                 </imageView>
                                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="avatarPlaceHolder" translatesAutoresizingMaskIntoConstraints="NO" id="6OT-Xf-Xga">
                                                                     <rect key="frame" x="2" y="2" width="46" height="46"/>
@@ -482,10 +483,17 @@
                                     <constraint firstAttribute="width" secondItem="ONk-MI-D65" secondAttribute="height" multiplier="375:240" id="utc-iQ-uVZ"/>
                                 </constraints>
                             </view>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="JhX-fz-Roy">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="30" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="JhX-fz-Roy">
                                 <rect key="frame" x="0.0" y="424" width="375" height="235"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </tableView>
+                            <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Sd3-pS-fym">
+                                <rect key="frame" x="0.0" y="619" width="375" height="40"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="Xr9-Oc-YDh"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
@@ -496,9 +504,12 @@
                             <constraint firstItem="tkW-xh-gfW" firstAttribute="trailing" secondItem="x5N-A4-ZPO" secondAttribute="trailing" id="Fxa-rT-F0X"/>
                             <constraint firstItem="tkW-xh-gfW" firstAttribute="leading" secondItem="x5N-A4-ZPO" secondAttribute="leading" id="HT0-mX-62d"/>
                             <constraint firstItem="JhX-fz-Roy" firstAttribute="top" secondItem="ONk-MI-D65" secondAttribute="bottom" id="L3Y-YC-Ngh"/>
+                            <constraint firstItem="x5N-A4-ZPO" firstAttribute="trailing" secondItem="Sd3-pS-fym" secondAttribute="trailing" id="Ocg-du-lgQ"/>
                             <constraint firstItem="Kyt-1I-jaY" firstAttribute="trailing" secondItem="x5N-A4-ZPO" secondAttribute="trailing" id="SuF-2G-Cmh"/>
+                            <constraint firstItem="eO6-3h-Cgu" firstAttribute="top" secondItem="Sd3-pS-fym" secondAttribute="bottom" id="Xg4-Ab-AEF"/>
                             <constraint firstItem="Kyt-1I-jaY" firstAttribute="top" secondItem="tkW-xh-gfW" secondAttribute="bottom" id="aaO-C1-ouR"/>
                             <constraint firstItem="ONk-MI-D65" firstAttribute="top" secondItem="Kyt-1I-jaY" secondAttribute="bottom" id="dO3-cP-7by"/>
+                            <constraint firstItem="Sd3-pS-fym" firstAttribute="leading" secondItem="x5N-A4-ZPO" secondAttribute="leading" id="kCX-z4-n1Q"/>
                             <constraint firstItem="eO6-3h-Cgu" firstAttribute="leading" secondItem="x5N-A4-ZPO" secondAttribute="leading" id="mOf-Ab-rYR"/>
                             <constraint firstItem="eO6-3h-Cgu" firstAttribute="top" secondItem="JhX-fz-Roy" secondAttribute="bottom" id="mPl-ez-oxe"/>
                             <constraint firstItem="JhX-fz-Roy" firstAttribute="leading" secondItem="x5N-A4-ZPO" secondAttribute="leading" id="ta6-mb-Vsy"/>
@@ -518,6 +529,7 @@
                         <outlet property="commentLabel" destination="uAN-bg-ErV" id="iUP-dl-Hvi"/>
                         <outlet property="commentView" destination="P78-Zx-hq2" id="0ai-vb-TkI"/>
                         <outlet property="followersCountLabel" destination="tzA-K4-kCM" id="ryc-cR-ZOP"/>
+                        <outlet property="gradientView" destination="Sd3-pS-fym" id="o0q-V4-cyQ"/>
                         <outlet property="moreBtn" destination="5OB-Pe-tql" id="LEC-nB-6MS"/>
                         <outlet property="overLayerNextBtn" destination="bvb-fE-KGx" id="9rQ-95-Dla"/>
                         <outlet property="overLayerSubLabel" destination="geA-2a-ybv" id="nKt-8a-cAF"/>
